--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
                     </h1>
                     <div class="subheading mb-5">
                         1234 N Bryan Street · Mission, TX 78573 · (956) 625-5547 ·
-                        <a href="mailto:name@email.com">name@email.com</a>
+                        <a href="mailto:name@email.com">alehin1331@gmail.com</a>
                     </div>
                     <p class="lead mb-5">I am knowledgable on basic HTML coding and ...</p>
                     <div class="social-icons">
